--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -20,7 +20,7 @@ resources:
       type: github
       name: hmcts/cpp-azure-devops-templates
       endpoint: 'hmcts'
-      ref: 'main'
+      ref: 'review-comment'
  
     - repository: buildSettings
       type: github
@@ -35,11 +35,11 @@ pool:
  
 variables:
   - name: sonarqubeProject
-    value: "" #update the sonarqube project for the respective repos
+    value: "uk.gov.justice.event-store:event-store" #update the sonarqube project for the respective repos
   - group: "cjs-common-platform" #this is common for all the repos
  
 stages:
   - template: pipelines/cjscp-framework-build.yaml@cppAzureDevOpsTemplates
     parameters:
       sonarqube_project: ${{ variables['sonarqubeProject'] }}
-      coveralls_repo_token: $() # this will be the repo name in lower case, Please refer this step "Update repo token in ADO library" in confluence to update in Azure devops, e.g., $(cjscp-event-store)
+      coveralls_repo_token: $(cjscp-event-store) # this will be the repo name in lower case, Please refer this step "Update repo token in ADO library" in confluence to update in Azure devops, e.g., $(cjscp-event-store)
