--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -36,7 +36,7 @@ pool:
 variables:
   - name: sonarqubeProject
     value: "uk.gov.justice.event-store:event-store" #update the sonarqube project for the respective repos
-  - group: "cjs-common-platform" #this is common for all the repos
+  - group: "cjs-common-platform"
  
 stages:
   - template: pipelines/cjscp-framework-build.yaml@cppAzureDevOpsTemplates
