--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -35,7 +35,7 @@ pool:
  
 variables:
   - name: sonarqubeProject
-    value: "uk.gov.justice.event-store:event-store" #update the sonarqube project for the respective repos
+    value: "uk.gov.justice.event-store:event-store"
   - group: "cjs-common-platform"
  
 stages:
